fix pour avoir une base propre